[gd_scene load_steps=12 format=3 uid="uid://d31w15eesd1is"]

[ext_resource type="Script" uid="uid://cq0pg627y4q0" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="PackedScene" uid="uid://wyia6nbwnbyp" path="res://mob.tscn" id="2_1bvp3"]
[ext_resource type="PackedScene" uid="uid://jdnrqh3qdvd8" path="res://player.tscn" id="2_h2yge"]
[ext_resource type="Texture2D" uid="uid://7ls3yqhxt1ja" path="res://art/Background.png" id="3_7mycd"]
[ext_resource type="PackedScene" uid="uid://bfhi5kh8a0s1s" path="res://hud.tscn" id="4_1bvp3"]
[ext_resource type="AudioStream" uid="uid://rc65wrsexej8" path="res://art/universe_bgm.mp3" id="6_272bh"]
[ext_resource type="AudioStream" uid="uid://dq07row7y7p0q" path="res://art/deltarune-explosion.mp3" id="7_272bh"]
[ext_resource type="AudioStream" uid="uid://dqc04swo141rw" path="res://art/SeismicCharge.wav" id="8_5vw27"]
[ext_resource type="AudioStream" uid="uid://dnkxfvuuy7y4y" path="res://art/game_over.mp3" id="9_kek77"]
[ext_resource type="AudioStream" uid="uid://yowytia8x6yx" path="res://art/sys_notification.mp3" id="10_4c57u"]

[sub_resource type="Curve2D" id="Curve2D_1bvp3"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -1, -1, 0, 0, 0, 0, 1105.17, 0.0370326, 0, 0, 0, 0, 1105.17, 829.663, 0, 0, 0, 0, -3.02327, 830.7, 0, 0, 0, 0, -2, 0, 0, 0, 0, 0, -1, -1)
}
point_count = 6

[node name="Main" type="Node"]
script = ExtResource("1_0xm2m")
mob_scene = ExtResource("2_1bvp3")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.425048, 0.619792, 0.300212, 1)

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_7mycd")

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(540, 520)

[node name="MobPath" type="Path2D" parent="."]
position = Vector2(-0.0454739, -0.0357102)
scale = Vector2(0.977263, 0.96429)
curve = SubResource("Curve2D_1bvp3")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2(-1, -1)
rotation = 0.000937498

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
energy = 0.8
blend_mode = 1

[node name="Player" parent="." instance=ExtResource("2_h2yge")]

[node name="HUD" parent="." instance=ExtResource("4_1bvp3")]

[node name="Music" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -1)
stream = ExtResource("6_272bh")

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_272bh")
volume_db = -6.483

[node name="FilterTimer" type="Timer" parent="."]
wait_time = 30.0

[node name="ChargeSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_5vw27")
volume_db = -0.855

[node name="GameOverSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_kek77")
volume_db = 9.805

[node name="UpdateSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_4c57u")

[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="nuke" from="Player" to="." method="_on_player_nuke"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="timeout" from="FilterTimer" to="." method="_on_filter_timer_timeout"]
